[tool.pdm]

[project]
name = "productivity-test"
version = "0.1.0"
description = "productity test"
authors = [
    {name = "shai", email = "shai.k@hiredscore.com"},
]
dependencies = [
    "pytest-ordering==0.6",
    "flasgger==v0.9.7b2",
    "pydantic==1.10.13",
    "flake8==4.0.1",
    "psycopg2>=2.9.1",
    "SQLAlchemy>=1.4.44",
]
requires-python = "==3.10.10"

license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "changelog-cli==0.7.1",
]
editable_inner = [
    
]

[project.optional-dependencies]
test = [
    "freezegun==0.3.15",
    "pytest-cov==2.12.0",
    "snapshottest==0.6.0",
]
inner = [
    
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"